--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -19,6 +19,16 @@ jobs:
       uses: actions/setup-node@v1
       with:
         node-version: ${{ matrix.node-version }}
+    - name: copy Stone Of Orthanc
+      run: |
+        mkdir stone
+        cd stone
+        wget https://lsb.orthanc-server.com/stone-webviewer/2.0/wasm-binaries.zip
+        unzip wasm-binaries.zip -d .
+        rm wasm-binaries.zip
+      working-directory: /tmp
+    - name: copy Temporary stone of Orthanc Build to Distribution
+      run : mv /tmp/stone ./viewer-stone
     - name: build OHIF
       run: |
         mkdir ohif
@@ -29,21 +39,11 @@ jobs:
         QUICK_BUILD=true PUBLIC_URL=/moodle/mod/dicomviewer/viewer-ohif/ yarn run build
       working-directory: /tmp
     - name: copy Temporary OHIF build to Distribution
-      run : mv build ../viewer-ohif
-      working-directory: /tmp
+      run : mv /tmp/build ../viewer-ohif
     - name: Replace configuration and app-config file
-      run : mv ../config-ohif ../viewer-ohif
-      working-directory: /tmp
-    - name: copy Stone Of Orthanc
-      run: |
-        mkdir stone
-        cd stone
-        wget https://lsb.orthanc-server.com/stone-webviewer/2.0/wasm-binaries.zip
-        unzip wasm-binaries.zip -d .
-        rm wasm-binaries.zip
-      working-directory: /tmp
-    - name: copy Temporary stone of Orthanc Build to Distribution
-      run : mv stone ../viewer-stone
+      run : mv /tmp/config-ohif ../viewer-ohif
+
+   
       working-directory: /tmp
     - name: create ZIP distribution
       run : zip -r moodle-dicom-viewer.zip .
