--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -39,7 +39,7 @@ jobs:
         QUICK_BUILD=true PUBLIC_URL=/moodle/mod/dicomviewer/viewer-ohif/ yarn run build
       working-directory: /tmp
     - name: copy Temporary OHIF build to Distribution
-      run : mv /tmp/build ./viewer-ohif
+      run : mv /tmp/ohif/build ./viewer-ohif
     - name: Replace configuration and app-config file
       run : mv ./config-ohif ./viewer-ohif
     - name: create ZIP distribution
