--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -42,21 +42,8 @@ jobs:
       run : mv /tmp/ohif/Viewers/platform/viewer/dist/* ./src/viewer-ohif
     - name: Replace configuration and app-config file
       run : mv ./src/config-ohif/* ./src/viewer-ohif
-    - name: create ZIP distribution
-      run : zip -r moodle-dicom-viewer.zip ./src/*
-    - name: Upload Release Asset
-      if: github.event.pull_request.merged == true
-      id: upload-release-asset 
-      uses: actions/upload-release-asset@v1
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      with:
-        upload_url: ${{ steps.create_release.outputs.upload_url }} # This pulls from the CREATE RELEASE step above, referencing it's ID to get its outputs object, which include a `upload_url`. See this blog post for more info: https://jasonet.co/posts/new-features-of-github-actions/#passing-data-to-future-steps 
-        asset_path: ./Distribution/moodle-dicom-viewer.zip
-        asset_name: moodle-dicom-viewer.zip
-        asset_content_type: application/zip
     - uses: actions/upload-artifact@v1
       with:
         name: moodle-dicom-viewer
-        path: moodle-dicom-viewer.zip
+        path: ./src/*
 
