--- a/Documentation/docker/Moddle/docker-compose.yml
+++ b/Documentation/docker/Moddle/docker-compose.yml
@@ -25,13 +25,14 @@ services:
         - 'moodledata_data:/bitnami/moodledata'
       networks:
         - internal
+        - web
       depends_on:
         - mariadb
       labels:
           - "traefik.enable=true"
-          - "traefik.port=80"
-          - "traefik.http.routers.blog.rule=Host(`localhost`)"
-          - "traefik.http.routers.blog.entrypoints=web"
+          - "traefik.port=8080"
+          - "traefik.http.routers.moodle.rule=Host(`localhost`)"
+          - "traefik.http.routers.moodle.entrypoints=web"
           - "traefik.docker.network=web"
 
     mariadb:
@@ -71,8 +72,8 @@ services:
         labels:
           - "traefik.enable=true"
           - "traefik.port=8042"
-          - "traefik.http.routers.blog.rule=Host(`localhost`);PathPrefix:/dicom-web/"
-          - "traefik.http.routers.blog.entrypoints=web"
+          - "traefik.http.routers.orthanc.rule=Host(`localhost`) && PathPrefix(`/dicom-web`)"
+          - "traefik.http.routers.orthanc.entrypoints=web"
           - "traefik.docker.network=web"
 
 volumes:
