--- a/Documentation/docker/Moddle/docker-compose.yml
+++ b/Documentation/docker/Moddle/docker-compose.yml
@@ -11,6 +11,7 @@ networks:
 services:
 
     moodle:
+      ports: ["8081:8080"]
       image: docker.io/bitnami/moodle:3
       restart: unless-stopped
       environment:
@@ -31,8 +32,8 @@ services:
       labels:
           - "traefik.enable=true"
           - "traefik.port=8080"
-          - "traefik.http.routers.moodle.rule=Host(`localhost`)"
-          - "traefik.http.routers.moodle.entrypoints=web"
+          - "traefik.http.routers.moodle.rule=Host(`salouma.ddns.net`)"
+          - "traefik.http.routers.moodle.entrypoints=websecure"
           - "traefik.docker.network=web"
 
     mariadb:
@@ -72,8 +73,8 @@ services:
         labels:
           - "traefik.enable=true"
           - "traefik.port=8042"
-          - "traefik.http.routers.orthanc.rule=Host(`localhost`) && PathPrefix(`/dicom-web`)"
-          - "traefik.http.routers.orthanc.entrypoints=web"
+          - "traefik.http.routers.orthanc.rule=Host(`salouma.ddns.net`) && PathPrefix(`/dicom-web/`)"
+          - "traefik.http.routers.orthanc.entrypoints=websecure"
           - "traefik.docker.network=web"
 
 volumes:
