--- a/Documentation/docker/Traefik/traefik.toml
+++ b/Documentation/docker/Traefik/traefik.toml
@@ -6,6 +6,12 @@
 [entryPoints]
   [entryPoints.web]
     address = ":80"
+    [entryPoints.web.http]
+      [entryPoints.web.http.redirections]
+        [entryPoints.web.http.redirections.entryPoint]
+          to = "websecure"
+          scheme = "https"
+          permanent = true
 
   [entryPoints.websecure]
     address = ":443"
