--- a/dicomviewer/config-ohif/configuration.json
+++ b/dicomviewer/config-ohif/configuration.json
@@ -1,5 +1,5 @@
 {
-		"routerBasename": "/",
+		"routerBasename": "/mod/dicomviewer/viewer-ohif/",
 		"extensions": [],
 		"showStudyList": true,
 		"filterQueryParam": false,
