modification nodejs.yml 2

--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -22,7 +22,7 @@ jobs:
     - name: Creation of the dicomviewer folder
       run : |
         mkdir dicomviewer
-        mv ./* ./tmp/dicomviewer
+        mv ./* /tmp/dicomviewer
       working-directory: /tmp
     - name: Copy temporary dicomviewer folder
       run : mv ./tmp/dicomviewer ./
