--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -53,9 +53,9 @@ jobs:
       run : mv ./dicomviewer/config-stone/* ./dicomviewer/viewer-stone
     - name: Deleting files .git
       run : |
-        rm -rf ./dicomviewer/.git
-        rm -rf ./dicomviewer/.github
-        rm -f ./dicomviewer/.gitignore
+        rm -rf ./.git
+        rm -rf ./.github
+        rm -f ./.gitignore
         rm -rf ./dicomviewer/Documentation
     - uses: actions/upload-artifact@v1
       with:
