--- a/config-ohif/configuration.json
+++ b/config-ohif/configuration.json
@@ -4,6 +4,16 @@
 		"showStudyList": true,
 		"filterQueryParam": false,
 		"disableServersCache": false,
+	  	"studyPrefetcher": {
+		    "enabled": true,
+		    "order": 'closest',
+		    "displaySetCount": 3,
+		    "preventCache": false,
+		    "prefetchDisplaySetsTimeout": 300,
+		    "maxNumPrefetchRequests": 100,
+		    "displayProgress": true,
+		    "includeActiveDisplaySet": true,
+		 },
 		"servers": {
 			"dicomWeb": [{
 				"name": "Orthanc",
