--- a/config-ohif/configuration.json
+++ b/config-ohif/configuration.json
@@ -12,7 +12,7 @@
 		    "prefetchDisplaySetsTimeout": 300,
 		    "maxNumPrefetchRequests": 100,
 		    "displayProgress": true,
-		    "includeActiveDisplaySet": true,
+		    "includeActiveDisplaySet": true
 		 },
 		"servers": {
 			"dicomWeb": [{
