--- a/viewer-ohif/.htaccess
+++ b/viewer-ohif/.htaccess
@@ -1,4 +1,9 @@
+<IfModule mod_mime.c>
+    AddType text/javascript mjs
+</IfModule>
+
 RewriteEngine On
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
 RewriteRule ^(.*)$ index.html [NC,L]
+
