--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -40,10 +40,8 @@ jobs:
       run: |
         mkdir ohif
         cd ohif
-        git clone --depth 1 --branch @ohif/viewer@4.12.30 https://github.com/OHIF/Viewers.git
-        cd Viewers
-        yarn install
-        QUICK_BUILD=true PUBLIC_URL=/mod/dicomviewer/viewer-ohif/ yarn run build
+        git clone --depth 1 --branch v3-stable https://github.com/OHIF/Viewers.git
+        RUN cd Viewers && yarn config set workspaces-experimental true && yarn install && QUICK_BUILD=true PUBLIC_URL=/mod/dicomviewer/viewer-ohif/ yarn run build
       working-directory: /tmp
     - name: copy Temporary OHIF build to Distribution
       run : mv /tmp/ohif/Viewers/platform/viewer/dist/* ./dicomviewer/viewer-ohif
