--- a/viewer-ohif/.htaccess
+++ b/viewer-ohif/.htaccess
@@ -7,3 +7,9 @@ RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
 RewriteRule ^(.*)$ index.html [NC,L]
 
+Header set Access-Control-Allow-Origin "*"
+Header set Access-Control-Allow-Methods "GET,OPTIONS,PUT"
+Header set Access-Control-Allow-Headers "accept,content-type,origin,authorization"
+Header set Access-Control-Maxage "100"
+Header set Cross-Origin-Embedder-Policy require-corp
+Header set Cross-Origin-Opener-Policy same-origin
