--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -35,7 +35,7 @@ jobs:
       run: |
         mkdir ohif
         cd ohif
-        git clone --depth 1 --branch v3-stable https://github.com/OHIF/Viewers.git
+        git clone --depth 1 --branch v3.7.0 https://github.com/OHIF/Viewers.git
         cd Viewers && yarn config set workspaces-experimental true && yarn install && QUICK_BUILD=true PUBLIC_URL=/mod/dicomviewer/viewer-ohif/ yarn run build
       working-directory: /tmp
     - name: copy Temporary OHIF build to Distribution
