--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,7 +25,7 @@ jobs:
       run: |
         mkdir stone
         cd stone
-        wget https://lsb.orthanc-server.com/stone-webviewer/2.3/wasm-binaries.zip
+        wget https://orthanc.uclouvain.be/downloads/linux-standard-base/stone-web-viewer/2.3/wasm-binaries.zip
         unzip wasm-binaries.zip -d .
         rm wasm-binaries.zip
       working-directory: /tmp
